# edgeai-nrf

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: nrf5340dk_nrf5340_cpuapp.overlay
src/: main.cpp
src/mpu6050/: mpu6050.cpp  mpu6050.h
src/mqtt/: mqtt.c  mqtt.h
